# tiago_simulation_mujoco

./: package.xml
assets/xacro/: arm.mujoco.xacro  assets.mujoco.xacro  end_effector.mujoco.xacro  head.mujoco.xacro  tiago.mujoco.xacro  torso.mujoco.xacro  wrist.mujoco.xacro
example/: scene.xml.xacro  scene_cupro.xml.xacro
launch/: tiago.launch  tiago_cupro.launch  tobi.launch
tiago_controller_configuration_mujoco/: CHANGELOG.rst  CMakeLists.txt  package.xml
tiago_controller_configuration_mujoco/launch/: default_controllers.launch  gravity_compensation_with_controller_wrist.launch  tiago_controllers.launch  tiago_controllers_min.launch
tiago_mujoco/: CMakeLists.txt  README.md  package.xml
tiago_mujoco/assets/xacro/: arm.mujoco.xacro  assets.mujoco.xacro  end_effector.mujoco.xacro  head.mujoco.xacro  tiago.mujoco.xacro  torso.mujoco.xacro  wrist.mujoco.xacro
tiago_mujoco/config/: conf.rviz  default_mjplugin_config.yaml  initial_joint_states.yaml  initial_joint_states_head_down.yaml
tiago_mujoco/example/: scene.xml.xacro  scene_cupro.xml.xacro
tiago_mujoco/launch/: simulation_tiago_bringup.launch  tiago.launch  tiago_controllers.launch  tiago_cupro.launch  tobi.launch
tiago_simulation_mujoco/: CMakeLists.txt  package.xml
