<?xml version="1.0"?>
<package>
  <name>tiago_controller_configuration_mujoco</name>
  <version>2.3.18</version>
  <description>The tiago_controller_configuration_mujoco package</description>
  <maintainer email="dleins@techfak.de">David Leins</maintainer>
  <author email="dleins@techfak.de">David Leins</author>

 <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>simple_grasping_action</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>play_motion</run_depend>
  <run_depend>tiago_moveit_config</run_depend>
  <run_depend>tiago_controller_configuration</run_depend>
  <run_depend>pal_wsg_gripper_controller_configuration_mujoco</run_depend>
  <!-- <run_depend>pal_robotiq_controller_configuration_mujoco</run_depend> -->

</package>
