<?xml version="1.0"?>
<package format="2">
  <name>tiago_mujoco</name>
  <version>1.0.0</version>
  <description>Tiago MuJoCo ROS configuration</description>

  <!-- <url type="repository">https://github.com/ubi-agni/mujoco_hog_plugin</url>
  <url type="bugtracker">https://github.com/ubi-agni/mujoco_hog_plugin/issues</url> -->

  <maintainer email="dleins@techfak.uni-bielefeld.de">David Leins</maintainer>
  <author>David Leins</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>tiago_description</exec_depend>
  <exec_depend>head_action</exec_depend>
  <exec_depend>tiago_moveit_config</exec_depend>
  <exec_depend>tiago_clf_launch</exec_depend>

</package>
